tools/tests/errors/tensor_log_domain.experr
tensor log
math domain error
